Fixed spacing on landing page

--- a/src/app/landing/landing.component.css
+++ b/src/app/landing/landing.component.css
@@ -7,6 +7,6 @@ h1 {
   color: white;
 }
 
-.features {
+.landing-item {
   margin: 10px;
 }
