--- a/src/app/landing/latest-lists/latest-lists.component.css
+++ b/src/app/landing/latest-lists/latest-lists.component.css
@@ -1,3 +1,3 @@
 .card {
-  margin: 30px 20px 10px 20px;
+
 }
